symfony email DONE

--- a/bundle/templates/mail/mail.html.twig
+++ b/bundle/templates/mail/mail.html.twig
@@ -14,12 +14,7 @@
 
 <body style="font-family: 'Readex Pro', sans-serif; background-color:#fafafa;margin:0;font-size:16px;line-height:22px;">
 <div style="text-align:left;padding:20px 0;width:500px;max-width:100%;margin:auto;">
-    <img
-            src="https://hyvor.com/img/logo.png"
-            style="width:30px;vertical-align:middle;"
-            alt="Hyvor Logo"
-    >
-    <span style="font-size:14px;color:black;font-weight:800;vertical-align:middle;">HYVOR</span>
+    <twig:mail:brand component="{{ component ?? 'core' }}"/>
 </div>
 
 <div style="width:550px;max-width:100%;background-color:white;margin:auto;border-radius:20px;-webkit-border-radius:20px;box-shadow:0 0 30px #0000000d;overflow:hidden;">
